# ockam-demo

./: .gitignore  README.md  REPORT.md
client/: Dockerfile  demo.py
client-side/examples/: python_mysql.py
client-side/examples/java/: JdbcDemo.java
client-side/images/: base.ubuntu.Dockerfile  java.Dockerfile  python.Dockerfile
client-side/sdk-java/: DEPLOY.md  README.md  SDK.md  pom.xml  verify.sh
client-side/sdk-java/scripts/: build-artifacts.sh
client-side/sdk-python/: DEPLOY.md  README.md  SDK.md  pyproject.toml  verify.sh
client-side/sdk-python/src/ockam_client/: __init__.py  admin.py  config.py  connect.py  errors.py  identity.py  process.py  tunnel.py
compose/: phase1.yml  phase2.yml
e2e-real/: DEPLOY.md  README.md  SDK.md  verify-modeA.sh  verify-modeB.sh
mysql/: init.sql
ockam/: Dockerfile  entrypoint.sh
ockam-server/controller/: DEPLOY.md  README.md  SDK.md  pyproject.toml  verify.sh
ockam-server/controller/src/ockam_controller/: __init__.py  __main__.py  app.py  auth.py  bootstrap.py  models.py  ockam_wrapper.py  state.py
ockam-server/docker/: DEPLOY.md  Dockerfile  SDK.md  docker-compose.example.yml  entrypoint.sh  supervisord.conf  verify.sh
ockam-server/install/: DEPLOY.md  SDK.md  install.sh  pack-offline.sh  verify.sh
ockam-server/install/lib/: deps.sh  detect_os.sh  download_ockam.sh  firewall.sh  healthcheck.sh  systemd_unit.sh
ockam-server/install/templates/: ockam-controller.service.tpl  ockam-server.service.tpl  (+1 more)
phase1/: README.md
phase2/: README.md
phase3/: README.md  analyze.sh
phase4/: README.md  verify.sh
(+10 files in other folders)
