[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ockam-client"
version = "0.1.0"
description = "Python SDK to open authenticated, encrypted tunnels through an Ockam server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27",
]

[project.optional-dependencies]
mysql = ["pymysql>=1.1"]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]
